deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-ops
  labels:
    # KubeSphere: gắn label này để namespace hiện trong workspace tương ứng
    kubesphere.io/workspace: soc
    app.kubernetes.io/part-of: soc-rapid-block
